<resources>
    <string name="app_name">AppFragments</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_nuevo_paciente">Nuevo Paciente</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_editar">editar</string>
    <string name="menu_listar">Listar</string>
    <string name="menu_creditos">Creditos</string>
    <string name="todo">picture</string>

    <string name="home_tv_titulo">
        Emergencias Hospital

    </string>
    <string name="home_tv_descripcion">
        Esta es una aplicacion acerca de un CRUD de pacientes
        de un hospital.
    </string>

    <string name="ingrese_id_paciente">
        Ingrese el id del paciente
    </string>

    <string name="action_buscar">Buscar</string>
    <string name="universidad">Instituto Tecnológico de Toluca</string>
    <string name="estudiante">Estudiante</string>
    <string name="nombre_estudiante">Juan Camilo Velandia Botello</string>
    <string name="profesor">Profesor</string>
    <string name="nombre_profesor">M. en C. Rocio Elizabeth Pulido Alba</string>
    <string name="carrera">Carrera:</string>
    <string name="nombre_carrera">Ingeniería en Sistemas Computacionales</string>
    <string name="materia">Materia:</string>
    <string name="nombre_materia">Desarrollo de Aplicaciones Móviles</string>
    <string name="semestre">Semestre: Enero - Junio</string>
    <string name="Grupo">grupo: Sist-Tics</string>
    <string name="ciclo">Ciclo escolar 2020</string>

</resources>
