<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_nuevo_paciente"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_nuevo_paciente" />
        <item
            android:id="@+id/nav_eliminar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_eliminar" />
        <item
            android:id="@+id/nav_editar"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_editar" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_listar"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_listar" />
            <item
                android:id="@+id/nav_creditos"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_creditos" />
        </menu>
    </item>

</menu>
