<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appfragments.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_nuevo_paciente"
        android:name="com.example.appfragments.ui.nuevo_paciente.NuevoPacienteFragment"
        android:label="@string/menu_nuevo_paciente"
        tools:layout="@layout/fragment_nuevo_paciente" />

    <fragment
        android:id="@+id/nav_eliminar"
        android:name="com.example.appfragments.ui.eliminar.EliminarFragment"
        android:label="@string/menu_eliminar"
        tools:layout="@layout/fragment_eliminar" />

    <fragment
        android:id="@+id/nav_editar"
        android:name="com.example.appfragments.ui.editar.EditarFragment"
        android:label="@string/menu_editar"
        tools:layout="@layout/fragment_editar" />

    <fragment
        android:id="@+id/nav_listar"
        android:name="com.example.appfragments.ui.listar.ListarFragment"
        android:label="@string/menu_listar"
        tools:layout="@layout/fragment_listar" />

    <fragment
        android:id="@+id/nav_creditos"
        android:name="com.example.appfragments.ui.creditos.CreditosFragment"
        android:label="@string/menu_creditos"
        tools:layout="@layout/fragment_creditos" />
</navigation>