<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:gravity="center">

            <TextView
                android:id="@+id/editar_tv_editar_paciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="Editar paciente"
                android:textSize="15sp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:columnCount="4">

                <EditText
                    android:id="@+id/editar_et_id_buscarPaciente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    android:hint="@string/ingrese_id_paciente"
                    android:inputType="number"
                    android:padding="10dp"
                    android:autofillHints="" />

                <Button
                    android:id="@+id/editar_btn_buscar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:text="@string/action_buscar"/>

            </GridLayout>

            <ImageView
                android:layout_width="295dp"
                android:layout_height="118dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/paciente"
                android:id="@+id/editar_iv_foto"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="ID"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/editar_et_idPaciente"
                    android:clickable="true"
                    android:focusable="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/editar_sp_areaDeIngreso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:entries="@array/opciones"
                    />

                <Spinner
                    android:id="@+id/editar_sp_doctorCrear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:entries="@array/o0"/>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="Nombre"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/editar_et_nombrePaciente"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/editar_sp_sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:entries="@array/sx"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="Fecha Ingreso">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="234dp"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="Fecha Ingreso"
                        android:id="@+id/editar_et_fechaIngreso"
                        />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:drawable/ic_menu_my_calendar"
                        android:id="@+id/editar_btn_fechaIngreso"/>

                </LinearLayout>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="Edad"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/editar_et_edadPaciente"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="Peso (kg)"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/editar_et_pesoPaciente"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:hint="Estatura (cm)"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/editar_et_estaturaPaciente"/>
            </com.google.android.material.textfield.TextInputLayout>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:columnCount="3"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/editar_btn_limpiar"
                    android:text="Limpiar"/>
                <Button
                    android:id="@+id/editar_btn_modificar"
                    android:text="Modificar paciente"/>
            </GridLayout>

            <TextView
                android:id="@+id/editar_tv_espacioblanco"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text=" " />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>